--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -1,16 +1,13 @@
-/* Navbar.css */
 .navBar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    background-color: #24292e;
     padding: 1rem 2rem;
-    color: white;
+    color: black;
 }
 
 .logo {
     font-size: 1.5rem;
-    font-weight: bold;
 }
 
 .navLinks {
@@ -20,6 +17,17 @@
 }
 
 .navLinks a {
+    color: black;
+    text-decoration: none;
+}
+
+.navLinks a:hover {
+    color: rgb(221, 211, 77);
+}
+
+/* Navbar.css
+
+.navLinks a {
     color: white;
     text-decoration: none;
     font-weight: 500;
@@ -27,4 +35,4 @@
 
 .navLinks a:hover {
     color: #58a6ff;
-}
+} */
