--- a/frontend/src/HomeImage.css
+++ b/frontend/src/HomeImage.css
@@ -5,3 +5,22 @@ body {
     font-family: "Tagesschrift", system-ui;
     font-style: normal;
 }
+
+h1 {
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in 1s forwards;
+}
+
+h2 {
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in 1.8s forwards;
+}
+
+/* Keyframes */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
+}
