did a little bit of css work, fetcthing for products seems to be working but theres no products yet

--- a/frontend/src/ProductList.css
+++ b/frontend/src/ProductList.css
@@ -1,8 +1,19 @@
+.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  text-align: center;
+  font-size: 1.3rem;
+}
+
 .productGrid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     gap: 1rem;
     padding: 1rem;
+    margin: 0;
+    padding: 5%;
   }
   
   .productCard {
