--- a/frontend/src/HomeImage.css
+++ b/frontend/src/HomeImage.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    padding-bottom: 5%;
     font-family: "Tagesschrift", system-ui;
     font-style: normal;
 }
@@ -16,11 +17,44 @@ h2 {
     animation: fadeIn 0.5s ease-in 1.8s forwards;
 }
 
+.photoGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 16px;
+    padding: 16px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.photoItem {
+    width: 50%;
+    margin: auto;
+    animation: upDownFloat 3s ease-in-out infinite;
+}
+
+.photoItem img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    transition: transform 0.2s ease;
+}
+
+.photoItem img:hover {
+    transform: scale(1.3);
+}
 /* Keyframes */
 @keyframes fadeIn {
     from {
         opacity: 0;
     } to {
         opacity: 1;
+    }
+}
+
+@keyframes upDownFloat {
+    0%, 100% {
+        transform: translate(0,0);
+    } 50% {
+        transform: translate(0, 7px);
     }
 }
