--- a/frontend/src/HomeImage.css
+++ b/frontend/src/HomeImage.css
@@ -8,8 +8,7 @@ body {
 }
 
 h1 {
-    opacity: 0;
-    animation: fadeIn 0.5s ease-in 1s forwards;
+    animation: upDownFloat 3s ease-in-out infinite;
 }
 
 h2 {
