--- a/frontend/src/ProductList.css
+++ b/frontend/src/ProductList.css
@@ -5,6 +5,7 @@
   height: 50vh;
   text-align: center;
   font-size: 1.3rem;
+  animation: upDownFloat 3s ease-in-out infinite;
 }
 
 .productGrid {
@@ -59,3 +60,11 @@
     background-color: #0056b3;
   }
   
+  /* Keyframes */
+  @keyframes upDownFloat {
+    0%, 100% {
+        transform: translate(0,0);
+    } 50% {
+        transform: translate(0, 7px);
+    }
+}
