--- a/frontend/src/HomeImage.css
+++ b/frontend/src/HomeImage.css
@@ -10,7 +10,7 @@ h1 {
     animation: upDownFloat 3s ease-in-out infinite;
 }
 
-h2 {
+.welcomeMsg {
     opacity: 0;
     animation: fadeIn 0.5s ease-in 1.8s forwards;
 }
