--- a/frontend/src/Product.css
+++ b/frontend/src/Product.css
@@ -26,14 +26,25 @@
     padding: 0.5rem 1rem;
     border-radius: 4px;
     cursor: pointer;
-  }
+}
 
-  .details button:hover {
+.details button:hover {
     background-color: rgb(240, 240, 66);
-  }
+}
 
 .productName {
     animation: upDownFloat 3s ease-in-out infinite;
+}
+
+.price {
+    font-weight: bold;
+    font-size: 1.4rem;
+    color: rgb(229, 169, 5);
+}
+
+.itemDescription {
+    font-style: italic;
+    font-size: 1.1rem;
 }
 
   /* Keyframes */
