--- a/frontend/src/ProductList.css
+++ b/frontend/src/ProductList.css
@@ -86,6 +86,12 @@
     outline: none;
   }
   
+  .addButton:active {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: transform 0.1s ease-out, background-color 0.1s ease-out; 
+}
   /* Keyframes */
   @keyframes upDownFloat {
     0%, 100% {
