--- a/frontend/src/Product.css
+++ b/frontend/src/Product.css
@@ -68,3 +68,9 @@
 .bounce {
     animation: bounce 0.5s ease;
 }
+
+.added {
+    background-color: rgb(45, 184, 38);
+    color: white;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
