--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -66,3 +66,17 @@
     border-radius: 30px;
     cursor: pointer; */
 }
+
+.avatarImg {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.nav-avatar {
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+}
