--- a/frontend/src/Product.css
+++ b/frontend/src/Product.css
@@ -12,12 +12,18 @@
 
 .productImg {
     flex-shrink: 0;
+    animation: upDownFloat 3s ease-in-out infinite;
 }
 
 .productImg img {
     max-width: 300px;
     height: auto;
     border-radius: 12px;
+    transition: transform 0.2s ease;
+}
+
+.productImg img:hover {
+    transform: scale(1.1);
 }
 
 .details {
@@ -25,6 +31,9 @@
     min-width: 300px;
     max-width: 600px;
     text-align: left;
+    background-color: beige;
+    padding: 30px;
+    border-radius: 10px;
 }
 
 .details button {
