--- a/frontend/src/ProductList.css
+++ b/frontend/src/ProductList.css
@@ -48,6 +48,7 @@
   }
   
   .productCard button {
+    font-family: "Tagesschrift", system-ui;
     background-color: #007bff;
     color: oldlace;
     border: none;
@@ -61,6 +62,7 @@
   }
 
   .sortContainer {
+    font-family: "Tagesschrift", system-ui;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,6 +73,7 @@
   }
   
   .sortContainer select {
+    font-family: "Tagesschrift", system-ui;
     padding: 0.4rem 0.8rem;
     font-size: 1rem;
     border: 1px solid #ccc;
