--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -44,24 +44,16 @@
 
 .navLinks a:hover {
     color: rgb(193, 183, 48);
-    transform: translateY(-7px);
+    text-shadow: none;
+    transform: scale(1.2);
 }
 
 .logoutBtn {
-    /* background-color: #EAE6DF;
-    padding: 15px 35px;
-    margin: 20px;
-    font-size: 15px;
-    letter-spacing: 2px;
-    transition: .3s ease-in;
-    animation: .5s ease-in;
-    border: 1px; */
-
     background-color: transparent;
     border: none;
     padding: 5px 10px;
     font-family: "Tagesschrift", system-ui;
-    transition: .3s ease-in;
+    transition: color .3s ease-in, background-color .3s ease-in, transform .3s ease-in, border-radius 0.3s ease-in;
     animation: .5s ease-in;
     text-shadow:
         -1px -1px 0 oldlace,
@@ -77,11 +69,6 @@
     border-radius: 30px;
     cursor: pointer;
     text-shadow: none;
-    /* background-color: #000;
-    color: #EAE6DF;
-    border: 1px;
-    border-radius: 30px;
-    cursor: pointer; */
-
+    transform: translateY(-7px);
 }
 
