--- a/frontend/src/Cart.css
+++ b/frontend/src/Cart.css
@@ -13,7 +13,7 @@
   }
   
   .cart-item {
-    background-color: oldlace;
+    background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 1rem;
