--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -9,12 +9,6 @@
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
-    color: black;
-    text-shadow:
-        -1px -1px 0 oldlace,
-        1px -1px 0 oldlace,
-        -1px 1px 0 oldlace,
-        1px 1px 0 oldlace;
 }
 
 .logoImg {
@@ -35,31 +29,29 @@
     text-decoration: none;
     display: inline-block;
     transition: color 0.3s ease, transform 0.3s ease;
-    text-shadow:
-        -1px -1px 0 oldlace,
-        1px -1px 0 oldlace,
-        -1px 1px 0 oldlace,
-        1px 1px 0 oldlace;
 }
 
 .navLinks a:hover {
     color: rgb(193, 183, 48);
-    text-shadow: none;
-    transform: scale(1.2);
+    transform: translateY(-7px);
 }
 
 .logoutBtn {
+    /* background-color: #EAE6DF;
+    padding: 15px 35px;
+    margin: 20px;
+    font-size: 15px;
+    letter-spacing: 2px;
+    transition: .3s ease-in;
+    animation: .5s ease-in;
+    border: 1px; */
+
     background-color: transparent;
     border: none;
     padding: 5px 10px;
     font-family: "Tagesschrift", system-ui;
-    transition: color .3s ease-in, background-color .3s ease-in, transform .3s ease-in, border-radius 0.3s ease-in;
+    transition: .3s ease-in;
     animation: .5s ease-in;
-    text-shadow:
-        -1px -1px 0 oldlace,
-        1px -1px 0 oldlace,
-        -1px 1px 0 oldlace,
-        1px 1px 0 oldlace;
 }
 
 .logoutBtn:hover {
@@ -68,7 +60,9 @@
     border: 1px;
     border-radius: 30px;
     cursor: pointer;
-    text-shadow: none;
-    transform: translateY(-7px);
+    /* background-color: #000;
+    color: #EAE6DF;
+    border: 1px;
+    border-radius: 30px;
+    cursor: pointer; */
 }
-
