adding balance thing to nav bar

--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -72,3 +72,11 @@
     transform: translateY(-7px);
 }
 
+.balance {
+        text-shadow:
+        -1px -1px 0 oldlace,
+        1px -1px 0 oldlace,
+        -1px 1px 0 oldlace,
+        1px 1px 0 oldlace;
+}
+
