--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -9,6 +9,12 @@
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    color: black;
+    text-shadow:
+        -1px -1px 0 oldlace,
+        1px -1px 0 oldlace,
+        -1px 1px 0 oldlace,
+        1px 1px 0 oldlace;
 }
 
 .logoImg {
@@ -29,11 +35,18 @@
     text-decoration: none;
     display: inline-block;
     transition: color 0.3s ease, transform 0.3s ease;
+    text-shadow:
+        -1px -1px 0 oldlace,
+        1px -1px 0 oldlace,
+        -1px 1px 0 oldlace,
+        1px 1px 0 oldlace;
 }
 
 .navLinks a:hover {
     color: rgb(193, 183, 48);
     transform: translateY(-7px);
+    text-shadow: none;
+    transform: scale(1.2);
 }
 
 .logoutBtn {
@@ -51,7 +64,13 @@
     padding: 5px 10px;
     font-family: "Tagesschrift", system-ui;
     transition: .3s ease-in;
+    transition: color .3s ease-in, background-color .3s ease-in, transform .3s ease-in, border-radius 0.3s ease-in;
     animation: .5s ease-in;
+    text-shadow:
+        -1px -1px 0 oldlace,
+        1px -1px 0 oldlace,
+        -1px 1px 0 oldlace,
+        1px 1px 0 oldlace;
 }
 
 .logoutBtn:hover {
@@ -60,9 +79,12 @@
     border: 1px;
     border-radius: 30px;
     cursor: pointer;
+    text-shadow: none;
     /* background-color: #000;
     color: #EAE6DF;
     border: 1px;
     border-radius: 30px;
     cursor: pointer; */
+
+    transform: translateY(-7px);
 }
