--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -88,3 +88,11 @@
 
     transform: translateY(-7px);
 }
+
+.balance {
+    text-shadow:
+        -1px -1px 0 oldlace,
+        1px -1px 0 oldlace,
+        -1px 1px 0 oldlace,
+        1px 1px 0 oldlace;
+}
