--- a/frontend/src/LoginSignUp.css
+++ b/frontend/src/LoginSignUp.css
@@ -1,7 +1,6 @@
 .loginsignup {
     width: 100%;
     min-height: 100vh;
-    background: #f5f5f5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,7 +13,7 @@
     width: 100%;
     padding: 2rem;
     box-sizing: border-box;
-    background: #fff;
+    background: oldlace;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   }
